# Ai-Code-Skill-Hub

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  skills.yaml
.github/workflows/: ci.yml  mutation.yml  release.yml
__test__/: README.md  __init__.py  helpers.py  test_cli.py  test_discovery.py  test_evals.py  test_installer.py  test_language_policy.py  test_layers.py  test_lockfile.py  test_mutation_wrapper.py  test_observations.py  test_release_gates.py  test_security.py  test_validator.py  test_yamlio.py
__test__/evals/example-skill/: cases.json
__test__/evals/hexagonal-service/: cases.json
__test__/evals/python-coding/: cases.json
__test__/evals/typescript-coding/: cases.json
__test__/evals/typescript-nestjs/: cases.json
__test__/fixtures/invalid-skill/: SKILL.md
__test__/fixtures/valid-skill/: ORIGIN.yaml  README.md  SKILL.md
__test__/fixtures/valid-skill/references/: notes.md
__test__/fixtures/valid-skill/scripts/: probe.py
__test__/network_blocker/: sitecustomize.py
__test__/scenarios/: README.md
__test__/skills/: __init__.py  scanner_conformance.py  test_example_skill.py  test_hexagonal_service.py  test_python_coding.py  test_typescript_coding.py  test_typescript_nestjs.py
scripts/: bump_version.py  check_language.py  check_mutation_score.py  check_release_gate.py  check_version_drift.py  mutation.py  run_skill_evals.py  skillctl.py  test_all.py  validate_all.py
skills/example-skill/: ORIGIN.yaml  README.md  SKILL.md
skills/example-skill/agents/: openai.yaml
skills/example-skill/data/: README.md
skills/example-skill/data/examples/: feature_change.diff  feature_change.expected
skills/example-skill/data/fixtures/: mixed_change.diff
skills/example-skill/knowledge/: INDEX.md  patterns.md  pitfalls.md
skills/example-skill/observations/: INDEX.md
skills/example-skill/observations/accepted/: OBS-20260712-001.md
skills/example-skill/observations/candidates/: OBS-20260712-002.md
skills/example-skill/references/: example.md
skills/example-skill/scripts/: example.py
skills/hexagonal-service/: README.md  SKILL.md
skills/hexagonal-service/agents/: openai.yaml
skills/hexagonal-service/references/: approaches.md  architecture.md  boundaries-and-io.md  checklist.md  domain-modeling.md  error-flow.md  strategies.md
skills/python-coding/: ORIGIN.yaml  README.md  SKILL.md
skills/python-coding/agents/: openai.yaml
skills/python-coding/data/: README.md
skills/python-coding/data/examples/: checked_input.expected  checked_input.py
skills/python-coding/data/fixtures/: app_config.py  clean_sample.py  justified_noqa.py  masked_literals.py  violations.py
skills/python-coding/knowledge/: INDEX.md  patterns.md  pitfalls.md
skills/python-coding/observations/: INDEX.md
skills/python-coding/observations/accepted/: OBS-20260724-001.md
skills/python-coding/references/: concurrency.md  errors-config-logging.md  generics-and-protocols.md  lint-clean.md  modern-python.md  runtime-correctness.md  security.md  testing.md  type-design.md  typing-and-style.md
skills/python-coding/scripts/: check_py_conventions.py
skills/typescript-coding/: ORIGIN.yaml  README.md  SKILL.md
skills/typescript-coding/agents/: openai.yaml
skills/typescript-coding/data/: README.md
skills/typescript-coding/data/examples/: checked_input.expected  checked_input.ts
skills/typescript-coding/data/fixtures/: clean_sample.ts  justified_rule_disable.ts  (+3 more)
skills/typescript-coding/knowledge/: INDEX.md  patterns.md  pitfalls.md
skills/typescript-coding/observations/: INDEX.md
skills/typescript-coding/references/: errors-config-logging.md  generics-and-type-level.md  lint-clean.md  testing.md  type-design.md  typing-and-style.md
skills/typescript-coding/scripts/: check_conventions.py
skills/typescript-nestjs/: README.md  SKILL.md
skills/typescript-nestjs/agents/: openai.yaml
skills/typescript-nestjs/data/: README.md
skills/typescript-nestjs/observations/: INDEX.md
skills/typescript-nestjs/references/: config-and-observability.md  di-and-modules.md  http-boundary.md  testing.md
skills/typescript-nestjs/scripts/: check_nest_conventions.py
src/skill_library/: __init__.py  cli.py  discovery.py  installer.py  lockfile.py  models.py  observations.py  security.py  validator.py  yamlio.py
templates/skill/: ORIGIN.yaml  SKILL.md
templates/skill/agents/: openai.yaml
templates/skill/data/: README.md
templates/skill/knowledge/: INDEX.md
templates/skill/observations/: INDEX.md
(+11 files in other folders)
