[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-library"
version = "2.0.0"
description = "Self-contained, vendor-neutral Agent Skills library with a management CLI (skillctl)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Волков Петр Викторович" }]
# Intentionally no dependencies: the CLI and tests run on pure stdlib.
dependencies = []

[project.scripts]
skillctl = "skill_library.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "mutmut>=3.6.0",
]

# The skill analyzers are imported in-process by their dedicated tests
# (__test__/skills/), so they are measured alongside the library code;
# subprocess CLI runs additionally pin the exit-code contract unmeasured.
[tool.coverage.run]
branch = true
source = [
    "src/skill_library",
    "skills/typescript-coding/scripts",
    "skills/typescript-nestjs/scripts",
    "skills/python-coding/scripts",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mutmut]
source_paths = [
    "src/skill_library",
    "skills/typescript-coding/scripts",
    "skills/typescript-nestjs/scripts",
    "skills/python-coding/scripts",
]
only_mutate = [
    "src/skill_library/security.py",
    "src/skill_library/lockfile.py",
    "src/skill_library/installer.py",
    "src/skill_library/yamlio.py",
    "src/skill_library/validator.py",
    "skills/typescript-coding/scripts/check_conventions.py",
    "skills/typescript-nestjs/scripts/check_nest_conventions.py",
    "skills/python-coding/scripts/check_py_conventions.py",
]
also_copy = ["__test__", "skills", "scripts", "skills.yaml", "pyproject.toml"]
pytest_add_cli_args = ["-q"]
pytest_add_cli_args_test_selection = [
    "__test__/test_yamlio.py",
    "__test__/test_security.py",
    "__test__/test_lockfile.py",
    "__test__/test_installer.py",
    "__test__/test_validator.py",
    "__test__/test_layers.py",
    "__test__/test_observations.py",
    "__test__/skills/test_typescript_coding.py",
    "__test__/skills/test_typescript_nestjs.py",
    "__test__/skills/test_python_coding.py",
]
mutate_only_covered_lines = true
